2014-04-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/fonts.c: Bug in font caching code, found by "Sunny",
	that could result in crashes fixed.

2014-03-27 Jens Thoms Toerring    <jt@toerring.de>

	* Some minor fixes for object label alignment

2014-03-25 Jens Thoms Toerring    <jt@toerring.de>

	* */Makefile.am: Removed '-Wl,--no-undefined' since
	this linker flag is not available everywhere
	* lib/flinternal.h: Removed stupid definition of variables
	- thanks go to André Ludwig for noticing the problem.

2014-03-19 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c: Another attempt at speeding-up redraws

2014-03-18 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c: Speed-up for redraws

2014-03-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/menu.c: Fix by Lothar Esser added for bug in
	menu handling.

2014-01-15 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: Bug reported by Arie van Wettum
	fixed.

2014-01-14 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: Newer Gnome desktop versions send a
	seemingly bogus _XIM_PROTOCOL message (for a window
	we never opened) that resulted in fl_do_forms() re-
	turning prematurely.

2014-01-05 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: Stupid bug fixed that could crash the
	program when using an xyplot object.
	* lib/forms.c, lib/object.c: Handling of coordinates
	after call of fl_flip_yorigin() wasn't correct.

2014-01-02 Jens Thoms Toerring    <jt@toerring.de>

	* Final corrections for new 1.2.0 release

2013-12-30 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Bug found by Werner Heisch fixed when
	editing several objects at once fixed (all got the
	same label string). Also bug in reset of spinner after
	testing removed.

2013-12-27 Jens Thoms Toerring    <jt@toerring.de>

	* libforms.spec.in: Check added if noarch package can be
	build of the documentation for (open)SUSE. Removed build
	dependencies on libXpm and libjpeg packages, which are